--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: ruby
-rvm:
-  - 2.3
-  - 2.2
-  - 2.1
-  - 2.0
 before_install:
   - gem install bundler
+matrix:
+  include:
+    - rvm: 2.0.0
+      gemfile: "test/gemfiles/Gemfile.ruby-2.0"
+    - rvm: 2.1
+      gemfile: Gemfile
+    - rvm: 2.2
+      gemfile: Gemfile
+    - rvm: 2.3.1
+      gemfile: Gemfile
