--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ before_install:
   - gem install bundler
 matrix:
   include:
-    # - rvm: 2.0.0
-    #   gemfile: "test/gemfiles/Gemfile.ruby-2.0"
-    - rvm: 2.1
+    - rvm: 2.1.10
       gemfile: Gemfile
-    - rvm: 2.2
+    - rvm: 2.2.8
       gemfile: Gemfile
-    - rvm: 2.3.1
+    - rvm: 2.3.5
+      gemfile: Gemfile
+    - rvm: 2.4.2
       gemfile: Gemfile
