--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
+sudo: false
 language: ruby
+cache: bundler
 before_install:
+  - gem update --system
   - gem install bundler
-matrix:
-  include:
-    # - rvm: 2.0.0
-    #   gemfile: "test/gemfiles/Gemfile.ruby-2.0"
-    - rvm: 2.1
-      gemfile: Gemfile
-    - rvm: 2.2
-      gemfile: Gemfile
-    - rvm: 2.3.1
-      gemfile: Gemfile
-    - rvm: 2.4.1
-      gemfile: Gemfile
+rvm:
+  - 2.5.1
+  - 2.4.4
+  - 2.3.7
