--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,3 @@
-## This file is managed by Terraform.
-## Do not modify this file directly, as it may be overwritten.
-## Please open an issue instead.
 name: CI
 on: [push, pull_request]
 jobs:
@@ -8,12 +5,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.7, '3.0', '3.1', '3.2']
+        ruby: [2.5, 2.6, 2.7, '3.0', '3.1', '3.2', 'head', 'jruby']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - run: bundle exec rake
